--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div id="calculator">
     <div class="heading-container">
-      <img src="star5.svg" alt="Star" class="star-icon">
+      <img src="Star5.svg" alt="Star" class="star-icon">
       <h1 class="main-heading">Split Bill Calculator</h1>
       <p class="sub-heading">Eating in restaurant? Paying bills? Paying for trip? <br> We got you!</p>
       <hr class="divider2">
